fix(attach): allowAttachSelf=false warns not refuses; reason-code form for cross-user/not-a-jvm
allowAttachSelf=false governs self-attach only and does not block an
external, same-user attach, so the pre-attach scan now warns and proceeds
instead of hard-refusing. -XX:+DisableAttachMechanism and
-XX:-EnableDynamicAgentLoading remain hard pre-scan refusals.

Pre-validation cross-user / not-a-jvm now print the same
'attach failed (reason=<code>):' form as every other refusal (exit
non-zero, never 'attached (preview)'), so the documented reason-code
table is true.

Docs and tests updated accordingly.

Co-authored-by: Gao Yu <gaoyu06@users.noreply.github.com>